--- a/assets/css/timeline.css
+++ b/assets/css/timeline.css
@@ -195,7 +195,7 @@ header h1{
   position: relative;
   margin: 1em 0 0 0;
   padding: 1em;
-  background: #212529;
+  background: var(--bs-body-bg);
   border: solid thin;
   border-radius: 20px;
   -webkit-box-shadow: 0 0 1px rgba(0, 0, 0, 0.20);
