fix custom font load error

--- a/assets/css/cfonts.css
+++ b/assets/css/cfonts.css
@@ -1,26 +1,16 @@
 @font-face {
 	font-family: 'Orbitron';
-	src: url('/assets/font/OrbitronBlack.woff') format('woff');
+	src: url('/assets/font/Orbitron-Black.ttf') format('ttf');
 	font-weight: 900;
 }
 @font-face {
 	font-family: 'Orbitron';
-	src: url('/assets/font/OrbitronBold.woff') format('woff');
-	font-weight: bold;
-}
-@font-face {
-	font-family: 'Orbitron';
-	src: url('/assets/font/OrbitronMedium.woff') format('woff');
+	src: url('/assets/font/Orbitron-Regular.ttf') format('ttf');
 	font-weight: normal;
 }
 @font-face {
-	font-family: 'Orbitron';
-	src: url('/assets/font/OrbitronLight.woff') format('woff');
-	font-weight: 100;
-}
-@font-face {
 	font-family: 'Heatwood';
-	src: url('/assets/font/Heatwood.woff') format('woff');
+	src: url('/assets/font/Heatwood.ttf') format('ttf');
 	font-weight: 100;
 }
 
@@ -28,17 +18,9 @@
 	font-family: 'Orbitron';
 	font-weight: 900;
 }
-.ft-orbitron-bold {
-	font-family: 'Orbitron';
-	font-weight: bold;
-}
 .ft-orbitron {
 	font-family: 'Orbitron';
 	font-weight: normal;
-}
-.ft-orbitron-light {
-	font-family: 'Orbitron';
-	font-weight: 100;
 }
 .ft-signature {
 	font-family: 'Heatwood';
