--- a/assets/css/map.css
+++ b/assets/css/map.css
@@ -1,11 +1,11 @@
 html,
 body {
-  position: absolute;
-  width: 100%;
-  height: 100%
+	position: absolute;
+	width: 100%;
+	height: 100%;
 }
 
 #map {
-  width: inherit;
-  height: inherit
+	width: inherit;
+	height: inherit;
 }
