--- a/assets/css/timeline.css
+++ b/assets/css/timeline.css
@@ -1,343 +1,143 @@
-.hexa {
-	border: 0px;
-	float: left;
-	text-align: center;
-	height: 35px;
-	width: 60px;
-	font-size: 22px;
-	background: #3c3c3c;
-	color: #3c3c3c;
-	position: relative;
-	margin-top: 15px;
-}
-.hexa:before {
-	content: '';
-	position: absolute;
-	left: 0;
-	width: 0;
-	height: 0;
-	border-bottom: 15px solid #3c3c3c;
-	border-left: 30px solid transparent;
-	border-right: 30px solid transparent;
-	top: -15px;
-}
-.hexa:after {
-	content: '';
-	position: absolute;
-	left: 0;
-	width: 0;
-	height: 0;
-	border-left: 30px solid transparent;
-	border-right: 30px solid transparent;
-	border-top: 15px solid #3c3c3c;
-	bottom: -15px;
-}
 .timeline {
-	position: relative;
-	padding: 0;
-	width: 100%;
-	margin-top: 20px;
-	list-style-type: none;
+	display: grid;
+	grid-template-columns: 0.25rem 1fr;
+	grid-auto-columns: -webkit-max-content;
+	grid-auto-columns: max-content;
+	-webkit-column-gap: 2rem;
+	-moz-column-gap: 2rem;
+	column-gap: 2rem;
+	list-style: none;
 }
-.timeline:before {
-	position: absolute;
-	left: 50%;
-	top: 0;
-	content: ' ';
-	display: block;
-	width: 2px;
-	height: 100%;
-	margin-left: -1px;
-	background: rgb(213, 213, 213);
-	background: -moz-linear-gradient(
-		top,
-		rgba(213, 213, 213, 0) 0%,
-		rgb(213, 213, 213) 8%,
-		rgb(213, 213, 213) 92%,
-		rgba(213, 213, 213, 0) 100%
-	);
-	background: -webkit-gradient(
-		linear,
-		left top,
-		left bottom,
-		color-stop(0%, rgba(30, 87, 153, 1)),
-		color-stop(100%, rgba(125, 185, 232, 1))
-	);
-	background: -webkit-linear-gradient(
-		top,
-		rgba(213, 213, 213, 0) 0%,
-		rgb(213, 213, 213) 8%,
-		rgb(213, 213, 213) 92%,
-		rgba(213, 213, 213, 0) 100%
-	);
-	background: -o-linear-gradient(
-		top,
-		rgba(213, 213, 213, 0) 0%,
-		rgb(213, 213, 213) 8%,
-		rgb(213, 213, 213) 92%,
-		rgba(213, 213, 213, 0) 100%
-	);
-	background: -ms-linear-gradient(
-		top,
-		rgba(213, 213, 213, 0) 0%,
-		rgb(213, 213, 213) 8%,
-		rgb(213, 213, 213) 92%,
-		rgba(213, 213, 213, 0) 100%
-	);
-	background: linear-gradient(
-		to bottom,
-		rgba(213, 213, 213, 0) 0%,
-		rgb(213, 213, 213) 8%,
-		rgb(213, 213, 213) 92%,
-		rgba(213, 213, 213, 0) 100%
-	);
-}
-.timeline li {
-	padding: 2em 0;
-}
-.timeline .hexa {
-	width: 16px;
-	height: 10px;
-	position: absolute;
-	background: #336699;
-	left: 0;
-	right: 0;
-	margin-left: auto;
-	margin-right: auto;
-	top: -30px;
-	margin-top: 0;
-}
-.timeline .hexa:before {
-	border-bottom: 4px solid #336699;
-	border-left-width: 8px;
-	border-right-width: 8px;
-	top: -4px;
-}
-.timeline .hexa:after {
-	border-left-width: 8px;
-	border-right-width: 8px;
-	border-top: 4px solid #336699;
-	bottom: -4px;
-}
-.direction-l,
-.direction-r {
-	float: none;
-	width: 100%;
-	text-align: center;
-}
-.flag-wrapper {
-	text-align: center;
-	position: relative;
-}
-.flag {
-	position: relative;
-	display: inline-flex;
-	background: #336699;
-	font-weight: 700;
-	padding: 5px 10px;
-	text-align: left;
-	border-radius: 10px;
-	color: #fff;
-}
-.direction-l .flag:after,
-.direction-r .flag:after {
+
+.timeline::before {
 	content: '';
+	grid-column: 1;
+	grid-row: 1 / span 20;
+	background: var(--bs-tertiary-color);
+}
+
+.timeline li {
+	grid-column: 2;
+	margin-inline: 1.5rem;
+	grid-row: span 2;
+	display: grid;
+	grid-template-rows: -webkit-min-content -webkit-min-content -webkit-min-content;
+	grid-template-rows: min-content min-content min-content;
+}
+
+.timeline li:not(:last-child) {
+	margin-bottom: 2rem;
+}
+
+.timeline li .date {
+	height: 3rem;
+	margin-inline: -1.5rem;
+	text-align: center;
+	color: var(--bs-success);
+	display: grid;
+	place-content: center;
+	position: relative;
+	border-radius: 1.5rem 0 0 1.5rem;
+}
+
+.timeline li .date::before {
+	content: '';
+	width: 1.8rem;
+	aspect-ratio: 1;
+	background: var(--bs-success);
 	position: absolute;
-	left: 50%;
-	top: -15px;
-	height: 0;
-	width: 0;
-	margin-left: -8px;
-	border: solid transparent;
-	border-bottom-color: #336699;
-	border-width: 8px;
-	pointer-events: none;
+	top: 100%;
+	-webkit-clip-path: polygon(0 0, 100% 0, 0 100%);
+	clip-path: polygon(0 0, 100% 0, 0 100%);
+	right: 0;
 }
-.direction-l .flag {
-	-webkit-box-shadow: -1px 1px 1px rgba(0, 0, 0, 0.15),
-		0 0 1px rgba(0, 0, 0, 0.15);
-	-moz-box-shadow: -1px 1px 1px rgba(0, 0, 0, 0.15), 0 0 1px rgba(0, 0, 0, 0.15);
-	box-shadow: -1px 1px 1px rgba(0, 0, 0, 0.15), 0 0 1px rgba(0, 0, 0, 0.15);
+
+.timeline li .date::after {
+	content: '';
+	display: block;
+	position: absolute;
+	width: 14px;
+	height: 14px;
+	background: var(--bs-success);
+	border-radius: 15px;
+	z-index: 1;
+	top: 50%;
+	-webkit-transform: translate(50%, -50%);
+	transform: translate(50%, -50%);
+	right: calc(100% + 2rem + 0.125rem);
 }
-.direction-r .flag {
-	-webkit-box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.15),
-		0 0 1px rgba(0, 0, 0, 0.15);
-	-moz-box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.15), 0 0 1px rgba(0, 0, 0, 0.15);
-	box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.15), 0 0 1px rgba(0, 0, 0, 0.15);
-}
-.time-wrapper {
-	display: flex;
+
+.timeline li .title {
 	position: relative;
-	margin: 2px 0 0 0;
-	line-height: 1em;
-	vertical-align: middle;
-	color: #fff;
-	justify-content: center;
+	padding-inline: 1.5rem;
+	overflow: hidden;
+	-webkit-padding-before: 1.5rem;
+	padding-block-start: 1.5rem;
+	-webkit-padding-after: 1rem;
+	padding-block-end: 1rem;
+	font-weight: 500;
 }
-.direction-l .time-wrapper {
-	float: none;
+
+.timeline li .title::before {
+	bottom: calc(100% + 0.125rem);
 }
-.direction-r .time-wrapper {
-	float: none;
+
+.timeline li .descr {
+	position: relative;
+	padding-inline: 1.5rem;
+	-webkit-padding-after: 1.5rem;
+	padding-block-end: 1.5rem;
+	font-weight: 300;
 }
-.time {
-	background: #56c3e7;
+
+.timeline li .descr::before {
+	z-index: -1;
+	bottom: 0.25rem;
+}
+
+@media (min-width: 40rem) {
+	.timeline {
+		grid-template-columns: 1fr 0.25rem 1fr;
+	}
+
+	.timeline::before {
+		grid-column: 2;
+	}
+
+	.timeline li:nth-child(odd) {
+		grid-column: 1;
+	}
+
+	.timeline li:nth-child(odd) .date {
+		border-radius: 0 1.5rem 1.5rem 0;
+	}
+
+	.timeline li:nth-child(odd) .date::before {
+		-webkit-clip-path: polygon(0 0, 100% 0, 100% 100%);
+		clip-path: polygon(0 0, 100% 0, 100% 100%);
+		left: 0;
+	}
+
+	.timeline li:nth-child(odd) .date::after {
+		-webkit-transform: translate(-50%, -50%);
+		transform: translate(-50%, -50%);
+		left: calc(100% + 2rem + 0.125rem);
+	}
+
+	.timeline li:nth-child(even) {
+		grid-column: 3;
+	}
+
+	.timeline li:nth-child(2) {
+		grid-row: 2/4;
+	}
+}
+
+.timeline .timeline-date {
+	width: 54px;
 	display: inline-block;
-	padding: 3px 5px;
-	border-radius: 5px;
-}
-.desc {
-	position: relative;
-	margin: 1em 0 0 0;
-	padding: 1em;
-	background: var(--bs-body-bg);
-	border: solid thin;
-	border-radius: 20px;
-	-webkit-box-shadow: 0 0 1px rgba(0, 0, 0, 0.2);
-	-moz-box-shadow: 0 0 1px rgba(0, 0, 0, 0.2);
-	box-shadow: 0 0 1px rgba(0, 0, 0, 0.2);
-}
-.direction-l .desc,
-.direction-r .desc {
-	position: relative;
-	margin: 1em 1em 0 1em;
-	padding: 1em;
-}
-@media (min-width: 768px) {
-	.timeline {
-		width: 660px;
-		margin: 0 auto;
-		margin-top: 20px;
-	}
-	.timeline li {
-		padding: 0.5em 0;
-	}
-	.timeline li:after {
-		content: '';
-		display: block;
-		height: 0;
-		clear: both;
-		visibility: hidden;
-	}
-	.timeline .hexa {
-		left: -28px;
-		right: auto;
-		top: 8px;
-	}
-	.timeline .direction-l .hexa {
-		left: auto;
-		right: -28px;
-	}
-	.direction-l {
-		position: relative;
-		width: 310px;
-		float: left;
-		text-align: right;
-	}
-	.direction-r {
-		position: relative;
-		width: 310px;
-		float: right;
-		text-align: left;
-	}
-	.flag-wrapper {
-		display: inline-block;
-	}
-	.flag {
-		font-size: 18px;
-	}
-	.direction-l .flag:after {
-		left: auto;
-		right: -16px;
-		top: 50%;
-		margin-top: -8px;
-		border: solid transparent;
-		border-left-color: #336699;
-		border-width: 8px;
-	}
-	.direction-r .flag:after {
-		top: 50%;
-		margin-top: -8px;
-		border: solid transparent;
-		border-right-color: #336699;
-		border-width: 8px;
-		left: -8px;
-	}
-	.time-wrapper {
-		display: inline;
-		vertical-align: middle;
-		margin: 14px 0 0 0;
-	}
-	.direction-l .time-wrapper {
-		float: left;
-	}
-	.direction-r .time-wrapper {
-		float: right;
-	}
-	.time {
-		padding: 5px 10px;
-	}
-	.direction-r .desc {
-		margin: 0.25em 0 0.5em 0.75em;
-	}
-	.direction-l .desc {
-		margin: 0.25em 0.75em 0.5em 0;
-	}
-}
-@media (min-width: 992px) {
-	.timeline {
-		width: 800px;
-		margin: 0 auto;
-		margin-top: 20px;
-	}
-	.direction-l {
-		position: relative;
-		width: 380px;
-		float: left;
-		text-align: right;
-	}
-	.direction-r {
-		position: relative;
-		width: 380px;
-		float: right;
-		text-align: left;
-	}
-}
-@media (min-width: 1200px) {
-	.timeline {
-		width: 1140px;
-		margin: 0 auto;
-		margin-top: 20px;
-	}
-	.direction-l {
-		position: relative;
-		width: 550px;
-		float: left;
-		text-align: right;
-	}
-	.direction-r {
-		position: relative;
-		width: 550px;
-		float: right;
-		text-align: left;
-	}
-}
-@media (min-width: 1400px) {
-	.timeline {
-		width: 1320px;
-		margin: 0 auto;
-		margin-top: 20px;
-	}
-	.direction-l {
-		position: relative;
-		width: 640px;
-		float: left;
-		text-align: right;
-	}
-	.direction-r {
-		position: relative;
-		width: 640px;
-		float: right;
-		text-align: left;
-	}
+	padding: 8px;
+	-webkit-clip-path: polygon(0 0, 100% 0, 100% 80%, 50% 100%, 0 80%);
+	clip-path: polygon(0 0, 100% 0, 100% 80%, 50% 100%, 0 80%);
+	z-index: 1;
 }
